--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
           <div class="author_content_col_left" class="author_content_txt">
             <p>쪽 빛</p>
-            <p>2025학년도 사진스튜디오2 수업 결과 전시</p>
+            <p>2025학년도 사진스튜디오(2) 과제전</p>
           </div>
 
           <div class="author_content_col_right" class="author_content_txt">
