--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
               단순한 종이 면에서 피어난 쪽빛 같은 조명들이, 여러분의 공간과
               마음에 새로운 형태의 빛을 선사하기를 기대합니다.
             </p>
+
+            <div class="author_video_wrapper">
+              <video
+                class="author_video no-interaction"
+                src="source/video/main.mp4"
+                autoplay
+                muted
+                loop
+                playsinline
+              >
+                브라우저에서 비디오 태그를 지원하지 않습니다.
+              </video>
+            </div>
           </div>
         </div>
       </div>
