--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
           <div class="author_content_col_left" class="author_content_txt">
             <p>쪽 빛</p>
             <p>2025학년도 사진스튜디오(2) 과제전</p>
+            <p>지도교수 이재용</p>
           </div>
 
           <div class="author_content_col_right" class="author_content_txt">
             <p>
-              빛을 이해하는 가장 순수한 방식은, 어쩌면 그 빛을 담는 그릇을
-              스스로 만들어보는 데서 시작할 것입니다. 본 전시는 사진스튜디오2
-              수업에 참여한 학생들이 A4 사이즈 용지라는 가장 평범하고 익숙한
-              재료를 매개로 빛의 원리와 구조를 탐구한 결과물입니다.
+              빛을 배우는 가장 순수한 방식은, 어쩌면 그 빛을 담는 그릇을 스스로
+              만들어보는 데서 시작할 것입니다. 본 전시는 스튜디오 사진2 수업에
+              참여한 학생들이 A4 사이즈 용지라는 가장 평범하고 익숙한 재료를
+              매개로 빛의 원리와 구조를 탐구한 결과물입니다.
             </p>
             <p>
               전시의 제목인 '쪽빛(종이의 면)'은 두 가지 의미를 갖습니다. 하나는
